[metadata]
name = CL4Archiver
version = 0.3.1
description = 4chan thread archiver
description-file = Readme.md
author = ARX8x
author_email = arx8x@pm.me
url = https://github.com/arx8x/4Chan-Archiver
keywords = 4chan, archive, convert, webm


[options]
packages = find_namespace:
install_requires = 
    requests==2.27.1
    validators==0.18.2
    parallel_tasks @ git+https://github.com/arx8x/py-parallel-tasks.git
    pyutils @ git+ssh://git@github.com/xKern/Python-Utils.git

[options.entry_points]
console_scripts = 
    cl4archiver=cl4archiver.main:main
